# MovieRecommendationSystem

./: .gitignore  README.md  app.py  movierecommendationsystem.py  pyproject.toml
